# decode-tiff

./: Cargo.toml  rustfmt.toml
src/: bytecast.rs  error.rs  lib.rs  tags.rs
src/decoder/: ifd.rs  image.rs  mod.rs  stream.rs  tag_reader.rs
tests/: decode_bigtiff_images.rs  decode_images.rs  fuzz_tests.rs
tests/images/: fixture.tiff
